feature: add select component

--- a/my-db/src/app/components/shared/button/button.component.scss
+++ b/my-db/src/app/components/shared/button/button.component.scss
@@ -6,7 +6,7 @@
   color: $baseWhite;
   font-family: $baseFont;
   font-size: $baseFontSize;
-  height: 55px;
+  height: $baseHeightSharedComponent;
   padding: 10px 20px;
   cursor: pointer;
 
