--- a/my-db/src/variables.scss
+++ b/my-db/src/variables.scss
@@ -1,7 +1,10 @@
 $baseWhite: #fff;
+$baseBlack: #000;
 
 $baseFont: 'Arial';
 $baseFontSize: 30px;
+
+$baseHeightSharedComponent: 55px;
 
 $primaryButtonColor: #A3C644;
 $secondaryButtonColor: #666;
