feature: add table component

--- a/my-db/src/app/components/shared/checkbox/checkbox.component.html
+++ b/my-db/src/app/components/shared/checkbox/checkbox.component.html
@@ -1,1 +1,5 @@
-<mat-checkbox (change)="onCheckboxChange($event)">{{caption}}</mat-checkbox>
+<mat-checkbox [checked]="isChecked"
+              [indeterminate]="isIndeterminate"
+              [aria-label]="ariaLabel"
+              (change)="onCheckboxChange($event)">{{caption}}
+</mat-checkbox>
