feature: add employes page

--- a/my-db/src/app/components/shared/input/input.component.html
+++ b/my-db/src/app/components/shared/input/input.component.html
@@ -1,4 +1,4 @@
 <input class="db-input"
-        #input
-        placeholder="placeholder"
-        (change)="onInputChange(input.value)" />
+        [id]="inputId"
+        [placeholder]="placeholder"
+        (change)="onInputChange($event)" />
