--- a/my-db/src/app/components/shared/table/table.component.html
+++ b/my-db/src/app/components/shared/table/table.component.html
@@ -1,5 +1,5 @@
 <!-- ObjectInfo Table-->
-<table *ngIf="tableType.objectInfo"
+<!-- <table *ngIf="tableType.objectInfo"
         mat-table
         [dataSource]="dataSource"
         matSort
@@ -81,11 +81,10 @@
       *matRowDef="let row; columns: displayedColumns;"
       (click)="selection.toggle(row)">
   </tr>
-</table>
+</table> -->
 
 <!-- Employes Table-->
-<table *ngIf="tableType.employes"
-        mat-table
+<table mat-table
         [dataSource]="dataSource"
         matSort
         class="mat-elevation-z8">
@@ -169,7 +168,7 @@
 </table>
 
 <!-- EmployInfo Table-->
-<table *ngIf="tableType.employInfo"
+<!-- <table *ngIf="tableType.employInfo"
         mat-table
         [dataSource]="dataSource"
         matSort
@@ -251,10 +250,10 @@
       *matRowDef="let row; columns: displayedColumns;"
       (click)="selection.toggle(row)">
   </tr>
-</table>
+</table> -->
 
 <!-- Welding Table-->
-<table *ngIf="tableType.welding"
+<!-- <table *ngIf="tableType.welding"
         mat-table
         [dataSource]="dataSource"
         matSort
@@ -336,10 +335,10 @@
       *matRowDef="let row; columns: displayedColumns;"
       (click)="selection.toggle(row)">
   </tr>
-</table>
+</table> -->
 
 <!-- WeldingInfo Table-->
-<table *ngIf="tableType.weldingInfo"
+<!-- <table *ngIf="tableType.weldingInfo"
         mat-table
         [dataSource]="dataSource"
         matSort
@@ -421,10 +420,10 @@
       *matRowDef="let row; columns: displayedColumns;"
       (click)="selection.toggle(row)">
   </tr>
-</table>
+</table> -->
 
 <!-- Object Table-->
-<table *ngIf="tableType.object"
+<!-- <table *ngIf="tableType.object"
         mat-table
         [dataSource]="dataSource"
         matSort
@@ -473,4 +472,4 @@
       *matRowDef="let row; columns: displayedColumns;"
       (click)="selection.toggle(row)">
   </tr>
-</table>
+</table> -->
