--- a/my-db/src/variables.scss
+++ b/my-db/src/variables.scss
@@ -1,10 +1,15 @@
 $baseWhite: #fff;
 $baseBlack: #000;
+$baseGray: #f2f2f2;
 
 $baseFont: 'Arial';
-$baseFontSize: 30px;
+$baseFontSize: 20px;
 
-$baseHeightSharedComponent: 55px;
+$baseHeightSharedComponent: 40px;
 
 $primaryButtonColor: #A3C644;
 $secondaryButtonColor: #666;
+
+$hoverLinkColor: #0F535E;
+
+$navigationBackgroundColor: #39C2D7;
