--- a/my-db/src/app/components/shared/select/select.component.html
+++ b/my-db/src/app/components/shared/select/select.component.html
@@ -1,9 +1,9 @@
 <div class="db-select">
-  <mat-select [placeholder]="'Объект'"
-              (selectionChange)="onSelectOptionChange($event)">
-    <mat-option *ngFor="let option of selectOptions"
-                [value]="option.value">
+  <select (change)="onSelectOptionChange($event)"
+          [id]="selectId">
+    <option *ngFor="let option of selectOptions"
+            [value]="option.value">
       {{option.viewValue}}
-    </mat-option>
-  </mat-select>
+    </option>
+  </select>
 </div>
